--- a/index.html
+++ b/index.html
@@ -1,46 +1,70 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <script src="./main.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        tailwind.config = {
+      tailwind.config = {
         theme: {
-            extend: {
+          extend: {
             colors: {
-                clifford: '#da373d',
-            }
-            }
-        }
-        }
+              clifford: "#da373d",
+            },
+          },
+        },
+      };
     </script>
-</head>
-<body class="bg-gray-400">
+  </head>
+  <body class="bg-gray-400">
     <div>
-        <div class="mx-auto max-w-7xl py-24 sm:px-6 sm:py-32 lg:px-8">
-          <div class="relative isolate overflow-hidden bg-gray-900 px-6 py-24 text-center shadow-2xl sm:rounded-3xl sm:px-16">
-            <h2 class="mx-auto max-w-2xl text-3xl font-bold tracking-tight text-white sm:text-4xl">Seja mais feliz hoje, todo dia um novo motivo.</h2>
-            <p class="mx-auto mt-6 max-w-xl text-lg leading-8 text-gray-300" id="frase-do-dia">
-                ...
-            </p>
-            <div class="mt-10 flex items-center justify-center gap-x-6">
-              <button id="button-gerar-frase" class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">Gerar frase</button>
-             </div>
-            <svg viewBox="0 0 1024 1024" class="absolute left-1/2 top-1/2 -z-10 h-[64rem] w-[64rem] -translate-x-1/2 [mask-image:radial-gradient(closest-side,white,transparent)]" aria-hidden="true">
-              <circle cx="512" cy="512" r="512" fill="url(#827591b1-ce8c-4110-b064-7cb85a0b1217)" fill-opacity="0.7" />
-              <defs>
-                <radialGradient id="827591b1-ce8c-4110-b064-7cb85a0b1217">
-                  <stop stop-color="#7775D6" />
-                  <stop offset="1" stop-color="#E935C1" />
-                </radialGradient>
-              </defs>
-            </svg>
+      <div class="mx-auto max-w-7xl py-24 sm:px-6 sm:py-32 lg:px-8">
+        <div
+          class="relative isolate overflow-hidden bg-gray-900 px-6 py-24 text-center shadow-2xl sm:rounded-3xl sm:px-16"
+        >
+          <h2
+            class="mx-auto max-w-2xl text-3xl font-bold tracking-tight text-white sm:text-4xl"
+          >
+            Seja mais feliz hoje, todo dia um novo motivo.
+          </h2>
+          <p
+            class="mx-auto mt-6 max-w-xl text-lg leading-8 text-gray-300"
+            id="frase-do-dia"
+          >
+            ...
+          </p>
+          <div class="mt-10 flex items-center justify-center gap-x-6">
+            <button
+              id="button-gerar-frase"
+              class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white"
+            >
+              Gerar frase
+            </button>
           </div>
+          <svg
+            viewBox="0 0 1024 1024"
+            class="absolute left-1/2 top-1/2 -z-10 h-[64rem] w-[64rem] -translate-x-1/2 [mask-image:radial-gradient(closest-side,white,transparent)]"
+            aria-hidden="true"
+          >
+            <circle
+              cx="512"
+              cy="512"
+              r="512"
+              fill="url(#827591b1-ce8c-4110-b064-7cb85a0b1217)"
+              fill-opacity="0.7"
+            />
+            <defs>
+              <radialGradient id="827591b1-ce8c-4110-b064-7cb85a0b1217">
+                <stop stop-color="#7775D6" />
+                <stop offset="1" stop-color="#E935C1" />
+              </radialGradient>
+            </defs>
+          </svg>
         </div>
       </div>
-</body>
+    </div>
+  </body>
+  <script src="./main.js"></script>
 </html>
